--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<p>jfhg jhgs dsfos sodfj</p>
 	</div>
 	<div>
-		<h1 id="f2">Roses photos</h1>
+		<h1 id="f2">Roses pictures</h1>
 		<p>jfhg jhgs dsfos sodfj</p>
 	</div>
     <script type="text/javascript" src="./script.js">
